--- a/index.org
+++ b/index.org
@@ -21,7 +21,7 @@
     <img src="/resources/img/org-mode-unicorn.svg"
          alt="Org unicorn logo" itemprop="image"/>
     <h2>
-      <span itemprop="name">Org-Mode</span>
+      <span itemprop="name">Org Mode</span>
       <p class="subtitle">Convenient <span itemprop="applicationCategory">plain text markup</span> and more</p>
     </h2>
   </div>
