--- a/quickstart.org
+++ b/quickstart.org
@@ -4,46 +4,73 @@
 #+include: "./resources/preamble.html" export html
 
 * Getting started with Org-mode
-There's a lot that Org-mode /can/ do for you, but you don't need much to get started.
+In its simplest form, Org is like any other markup language.
+You can write [[https://orgmode.org/worg/dev/org-syntax.html][Org syntax]] in any text editor.
 
-You can start writing Org syntax in any plain text editor, however to see what
-makes it /great,/ one really needs have an editor with rich support.
+However, to experience the full potential of Org you need an editor
+that transforms Org syntax into a living, interactive document.
 
 #+begin_center
 #+attr_html: :class btn
 *[[file:install.org][Install Org]]*
 #+end_center
 
-At the start of a file, it is common to set a title and author
-(these are two of the [[https://orgmode.org/manual/Export-Settings.html][export options]] --- think file properties).
+* Preamble
+At the start of a file (before the first headline), it is common to
+set the title, author, and other
+[[https://orgmode.org/manual/Export-Settings.html][export options]].
 #+BEGIN_SRC org
-,#+title: My file
-,#+author: myself
+,#+title: The glories of Org
+,#+author: A. Org Writer
 #+END_SRC
-* Headings
-Lines starting with ~*~ are headings. A single ~*~ denotes 1st-level heading, ~**~
-denotes a 2nd-level heading, etc.
+
+* Headlines
+Lines that start with and asterisk ~*~ are [[https://orgmode.org/worg/dev/org-syntax.html#Headlines_and_Sections][headlines]].
+
+A single ~*~ denotes a 1st-level headline, ~**~ denotes a 2nd-level headline, etc.
 #+BEGIN_SRC org
 ,* Welcome to Org-mode
 ,** Sub-heading
-   Every extra ~*~ brings you to a lower heading level.
+Each extra ~*~ increases the depth by one level.
 #+END_SRC
 
-To make a header into a task, just start the heading with a task keyword like
-~TODO~ or ~HOLD~.
-* Text styles
-With org, *bold* /italic/ and _underline_ are all nice and simple. ~code~ and =verbatim=
-are also nice and easy. If you must, +strikethrough+ is also available.
-_/*Combine*/_ these as you'd like.
+In their simplest form headlines are just the start of a section.
+However, any headline can also become a [[https://orgmode.org/manual/TODO-Items.html][TODO item]].
+
+TODO items are the basic building block that Org uses to track and
+organize all kinds of tasks.
+
+To add a TODO item to a heading, start the heading with a TODO
+keyword such as ~TODO~ or ~HOLD~.
+
+#+BEGIN_SRC org
+,* TODO Promulgate Org to the world
+,** TODO Create a quickstart guide
+#+END_SRC
+
+* Markup
+To mark up text in Org, simply surround it with one or more marker characters.
+*bold* /italic/ and _underline_ are fairly intuitive, and the ability to use
++strikethrough+ is a plus.  You can +_/*combine*/_+ the basic markup in any
+order, however ~code~ and =verbatim= need to be the *_~inner-most~_* markers
+if they are present since their contents are interpreted =_literally_=.
 
 #+BEGIN_EXAMPLE
-With org, *bold* /italic/ and _underline_ are all nice and simple. ~code~ and =verbatim=
-are also nice and easy. If you must, +strikethrough+ is also available.
-_/*Combine*/_ these as you'd like.
+To markup text in Org, simply surround it with one or more marker characters.
+*bold* /italic/ and _underline_ are fairly intuitive, and the ability to use
++strikethrough+ is a plus.  You can +_/*combine*/_+ the basic markup in any
+order, however ~code~ and =verbatim= need to be the *_~inner-most~_* markers
+if they are present since their contents are interpreted =_literally_=.
 #+END_EXAMPLE
+
+See [[https://orgmode.org/worg/dev/org-syntax.html#Emphasis_Markers][Emphasis Markers]] for more details.
+
 * Lists
-Start a list with any of: ~+~, ~-~, or ~*~ for un-ordered lists, and ~1.~, ~1)~, ~A.~, or ~A)~
-for ordered lists. Nest and mix these as you'd like :)
+Unordered lists start with ~+~, ~-~, or ~*~[fn::~*~ cannot
+be used to start a plain list if it is immediately preceded by
+a newline because it will be interpreted as a headline.].
+Ordered lists start with ~1.~, ~1)~, ~A.~, or ~A)~.
+Ordered and unordered bullets can be nested in any order.
 
 #+BEGIN_SRC org
 To buy:
@@ -55,28 +82,34 @@ To buy:
    + Mozzarella
 #+END_SRC
 
-Lists can also contain checkboxes: ~[ ]~, ~[-]~, ~[X]~
+Lists can contain checkboxes ~[ ]~, ~[-]~, ~[X]~.
 #+BEGIN_SRC org
 - [ ] do
 - [-] the
 - [X] thing
 #+END_SRC
-* Images
-Just link to an image, and don't give a description. Seriously, that's it. \\
-~[[https://upload.wikimedia.org/wikipedia/commons/5/5d/Konigsberg_bridges.png]]~
 
-#+attr_html: :height 120px
-[[https://upload.wikimedia.org/wikipedia/commons/5/5d/Konigsberg_bridges.png]]
+Lists can contain tags (and checkboxes at the same time).
+#+BEGIN_SRC org
+- [ ] fruits :: get apples
+- [X] veggies :: get carrots
+#+END_SRC
+
 * Links
-Just put a target in between two square brackets, like so: ~[[target]]~. Want to
-add a description? Just add a ~[description]~ after the target, i.e.
-~[[target][desc]]~.
+To create a link put the target between two square brackets, like so: ~[[target]]~.
+To add a description add it in square brackets after the target ~[[target][desc]]~.
 
-Org can handle a variety of different types of targets, which you use by giving
-~[target]~ as ~[type:target]~. When no ~type:~ is provided, org just searches for a
-heading which matches ~target~.
+The order is easy to remember because it is the same as an html =<a>=
+tag ~<a href="target">desc</a>~ and you can't mix up brackets and
+parentheses because there are only square brackets!
 
-A few examples:
+Org supports a wide variety of types of link targets, and you can also
+[[https://orgmode.org/manual/Adding-Hyperlink-Types.html][add your own]].
+Link types are indicated with a ~type:~ prefix, e.g. ~[type:target]~.
+If no ~type:~ is provided, org searches the current file for a headline
+that matches ~target~.
+
+Some examples:
 #+BEGIN_EXAMPLE
 [[https://orgmode.org][a nice website]]
 [[file:~/Pictures/dank-meme.png]]
@@ -84,28 +117,62 @@ A few examples:
 #+END_EXAMPLE
 
 ** More info
-For more information, see the manual sections on [[https://orgmode.org/manual/Internal-Links.html][Internal Links]] and [[https://orgmode.org/manual/External-Links.html#External-Links][External Links]].
-* Code blocks
-To just have a monospace block,
+For more on links, see the manual sections for
+[[https://orgmode.org/manual/Internal-Links.html][Internal Links]] and
+[[https://orgmode.org/manual/External-Links.html][External Links]].
+* Images
+Org mode automatically recognizes and renders image links.
+Just link to an image (don't include a description). That's it. \\
+~[[https://upload.wikimedia.org/wikipedia/commons/5/5d/Konigsberg_bridges.png]]~
 
+#+attr_html: :height 120px
+[[https://upload.wikimedia.org/wikipedia/commons/5/5d/Konigsberg_bridges.png]]
+
+* Blocks
+Org mode uses =#+BEGIN= ... =#+END= blocks for many purposes.
+Some of the basic blocks types quote, example, and src.
+
+If you all you need is monospace text, you can use an example block.
 #+BEGIN_SRC org
 ,#+BEGIN_EXAMPLE
 monospace
 ,#+END_EXAMPLE
 #+END_SRC
 
-If you want syntax highlighting and execution try
+However, example blocks do not give you the awesome power of [[https://orgmode.org/worg/org-contrib/babel/][Org babel]].
+For that you need a source block.
+Source blocks provide syntax highlighting, code execution, literate programming, and more.
 #+BEGIN_SRC org
-,#+BEGIN_SRC python
-print("Hello world")
+,#+BEGIN_SRC emacs-lisp
+(message "Hello world")
 ,#+END_SRC
 #+END_SRC
 
 ** More info
-You can do a /lot/ with source code in org, see the [[https://orgmode.org/manual/Working-with-Source-Code.html][Manual]] for more information.
+A hello world example cannot even begin to scratch the surface
+Org mode's support for [[https://orgmode.org/manual/Working-with-Source-Code.html][working with source code]].
+
+[[https://orgmode.org/worg/org-contrib/babel/][Org babel]] transforms
+source blocks into a complete literate programming environment,
+allowing you to weave the inputs and outputs of multiple languages,
+and runtime environments, across multiple machines into a single
+unified system, empowering you to achieve new levels of DRYness
+regardless of whether the languages you are working in want you to or
+not. Program your way.
+
 * Tables
-It's just like this comparison of existing Literate programming / reproducible
-research tools (taken from [[doi:10.18637/jss.v046.i03][this paper]]).
+Org mode comes with a table editor complete with support cell references
+and formulas.
+
+In its simplest form a table is text separated using pipes ~|~.
+#+BEGIN_SRC org
+| I    | am  | a    | table |
+| with | two | rows | !     |
+#+END_SRC
+
+A more useful example is this comparison of existing Literate
+programming / reproducible research tools (from
+[[doi:10.18637/jss.v046.i03][Schulte /et al./ 2012]]).
 #+BEGIN_SRC org
 | Tool         | Literate programming? | Reproducible Research? | Languages |
 |--------------+-----------------------+------------------------+-----------|
@@ -116,8 +183,11 @@ research tools (taken from [[doi:10.18637/jss.v046.i03][this paper]]).
 | Org-mode     | yes                   | yes                    | any       |
 #+END_SRC
 
+Worried about aligning free text tables?
+Org mode does it in a single keystroke -- =tab=.
+
 * Next steps
-Want to look up something in particular? You may want to give the [[file:manual/][manual]] ([[file:org.pdf][PDF]]) a
-glance. \\
-Looking for something in-between the manual and this quickstart? Give the [[file:guide/][guide]]
-([[file:orgguide.pdf][PDF]]) a shot.
+Looking for something in particular?
+The [[file:manual/][manual]] ([[file:org.pdf][PDF]]) is a good place to start. \\
+Looking for something between this quickstart and the manual?
+The [[file:guide/][guide]] ([[file:orgguide.pdf][PDF]]) is worth a shot.
